--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "googleapis": "^16.1.0",
     "he": "^1.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "jsondiffpatch": "^0.1.33",
     "jszip": "^2.6.1",
     "lodash": "^4.17.13",
@@ -55,7 +55,7 @@
     "passport": "*",
     "passport-local": "*",
     "passport-local-mongoose": "^1.0.0",
-    "pug": "^2.0.0-rc.2",
+    "pug": "^2.0.4",
     "reflect-metadata": "^0.1.12",
     "socialcalc": "^2.3.0",
     "socket.io": "^1.3.5",
